# uav_inspection_ros2

./: CMakeLists.txt  README.md  install.sh  package.xml  run_px4_sitl.sh
config/: kinematics.yaml  model.srdf  moveit.rviz  moveit.yaml  ompl_planning.yaml  sensors_3d.yaml  uav_controllers.yaml  uav_ros_controllers.yaml
docker/: Dockerfile  docker-compose.yml
launch/: description.launch.py  moveit.launch.py
meshes/: iris_prop_ccw.stl  iris_prop_cw.stl
src/: moveit_planning.cpp  simple_goal_publisher.cpp
urdf/: custom_iris.xacro
